@@ -1,6 +1,15 @@
 # ChangeLog for media-sound/fluidsynth
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  03 Apr 2015; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  fluidsynth-9999.ebuild:
+  move to upstream git, wrt #191
+  add examples use flag
+  add ipv6 use flag
+  drop version specifiers
+  replace fluid_use calls with cmake-utils_use calls
+  install pdf documentation
 
   05 Sep 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
   fluidsynth-9999.ebuild, metadata.xml:
